--- a/Cloudformation.yaml
+++ b/Cloudformation.yaml
@@ -409,8 +409,8 @@ Resources:
             systemctl enable aws-appconfig-agent
             systemctl restart aws-appconfig-agent
             cd /opt
-            git clone https://github.com/aws-samples/custom-web-experience-with-amazon-q-business.git
-            cd custom-web-experience-with-amazon-q-business/
+            git clone https://github.com/seharaki/custom-web-ui.git
+            cd custom-web-ui/
             git checkout ${GithubBranch}
             pip3.11 install virtualenv
             python3.11 -m virtualenv venv
@@ -605,7 +605,7 @@ Outputs:
     Value: !If [UseCognito, !GetAtt UserPool.ProviderURL, !Ref OAuthIssuer]
   Audience:
     Description: Audience to setup customer application in Identity Center
-    Value: !If [UseCognito, !Ref UserPoolClient, !Ref OAuthClientId ]
+    Value: !If [UseCognito, !Ref UserPoolClient, !Ref OAuthClientId]
   RoleArn:
     Description: "ARN of the IAM role required to setup token exchange in Identity Center"
     Value: !GetAtt EC2ServiceRole.Arn
