--- a/Cloudformation.yaml
+++ b/Cloudformation.yaml
@@ -196,6 +196,16 @@ Resources:
               - "appconfig:GetLatestConfiguration"
             Resource:
               - !Sub "arn:${AWS::Partition}:appconfig:${AWS::Region}:${AWS::AccountId}:application/${AppConfig}/environment/${AppConfigEnvironment}/configuration/${AppConfigConfigProfile}"
+          - Sid: AllowDynamoDBAccess
+            Effect: Allow
+            Action:
+              - "dynamodb:PutItem"
+              - "dynamodb:UpdateItem"
+              - "dynamodb:GetItem"
+              - "dynamodb:DeleteItem"
+              - "dynamodb:Scan"
+            Resource:
+              - !Sub "arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${FeedbackTableName}"
 
   AppConfig:
     Type: AWS::AppConfig::Application
