--- a/Cloudformation.yaml
+++ b/Cloudformation.yaml
@@ -48,10 +48,10 @@ Parameters:
     Type: String
     Description: Github branch to deploy the app from.
     Default: "main"
-  FeedbackTableName:
+  QBusinessVOATableName:
     Type: String
-    Description: Name of the DynamoDB table to store feedback
-    Default: Feedback
+    Description: Name of the DynamoDB table to store QBusinessVOA
+    Default: QBusinessVOA
   ExternalFQDN:
     Type: String
     Description: Custom domain name for the application. Leave empty if you want to use the default ALB generated domain name.
@@ -205,7 +205,7 @@ Resources:
               - "dynamodb:DeleteItem"
               - "dynamodb:Scan"
             Resource:
-              - !Sub "arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${FeedbackTableName}"
+              - !Sub "arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${QBusinessVOATableName}"
 
   AppConfig:
     Type: AWS::AppConfig::Application
@@ -278,19 +278,19 @@ Resources:
       ReplicateTo: "NONE"
       GrowthType: "LINEAR"
 
-  FeedbackDynamoDBTable:
+  QBusinessVOA:
     Type: AWS::DynamoDB::Table
     Properties:
-      TableName: !Ref FeedbackTableName
+      TableName: !Ref QBusinessVOATableName
       AttributeDefinitions:
         - AttributeName: UserId
           AttributeType: S
-        - AttributeName: Timestamp
+        - AttributeName: ConversationId
           AttributeType: S
       KeySchema:
         - AttributeName: UserId
           KeyType: HASH
-        - AttributeName: Timestamp
+        - AttributeName: ConversationId
           KeyType: RANGE
       ProvisionedThroughput:
         ReadCapacityUnits: 5
