fixing queue chain

--- a/Cloudformation.yaml
+++ b/Cloudformation.yaml
@@ -247,7 +247,7 @@ Resources:
             "OAuthConfig": {
               "ClientId": "${ClientId}",
               "ExternalDns": "${Fqdn}",
-              "CognitoDomain" : "${Issuer}"
+              "Domain" : "${Issuer}"
             }
           }
         - Issuer:
