--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-pyjwt
-streamlit==1.34
+pyjwt==2.6.0
+streamlit==1.34.0
 retrying==1.3.4
+opensearch-py==2.3.1
 streamlit-oauth
 streamlit-feedback
 streamlit-modal
-boto3
+boto3==1.28.0
+urllib3==1.26.15
